[package]
name = "surfer"
version = "0.1.0"
authors = ["micouy <szpontaniczny@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "surfer-server"
path = "src/server.rs"

[[bin]]
name = "surfer-sound"
path = "src/sound.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.1", features = ["net"] }
warp = "0.3"
pretty_env_logger = "*"
futures = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
rodio = "*"
